# owlv2_onnx

./: README.md  owl_onnx_inference.py  owlv2_transformer_detec.py  pyproject.toml
